# sophixer

./: .gitignore  .luarc.json  Cargo.toml  Makefile  README.md  buf.yaml
bismuth/: Cargo.toml
common/intercom/: Cargo.toml
common/intercom/src/: server.rs
common/intercom/tests/: simple.rs
crates/bismuth/: Cargo.toml
crates/bismuth/src/: main.rs  model.rs  view.rs
crates/bismuth/src/net/: client.rs  mod.rs
crates/editor/: Cargo.toml
crates/editor-cli/: Cargo.toml
crates/editor-cli/src/: main.rs
crates/editor/src/: main.rs
crates/editor/src/views/: mod.rs  sections.rs  select.rs
crates/editor/src/widgets/: channel_selector.rs  mod.rs
crates/editor/src/windows/: button_editor.rs  mod.rs  pattern_editor.rs  section_editor.rs  set_editor.rs  song_editor.rs  song_new.rs
crates/intercom/: Cargo.toml
crates/intercom/src/: lib.rs
crates/intercom/src/client/: mod.rs  udp.rs  udp.rs.old
crates/intercom/src/server/: mod.rs  udp.rs  udp.rs.old
crates/intercom/tests/: simple.rs
crates/sophixer-core/: Cargo.toml  build.rs
crates/sophixer-core/src/: lib.rs  messages.rs  song_data.rs
crates/sophixer-core/src/data/: buttons.rs  channels.rs  mod.rs
crates/sophixer-core/src/data/buttons/: cycle_effect_parameter_value.rs  mod.rs  play_sample.rs  toggle_channels.rs  toggle_effect_bypass.rs  toggle_track_patterns.rs
crates/sophixer-core/src/messages/: bismuth.rs  helpers.rs  mod.rs  renoise.rs
crates/tin/: Cargo.toml
crates/tin-core/: Cargo.toml
crates/tin-core/src/: lib.rs  song_data.rs
crates/tin-drivers-midi/: Cargo.toml
crates/tin-drivers-midi/src/: lib.rs
crates/tin-drivers-midi/src/devices/: mod.rs
crates/tin-drivers-midi/src/devices/launch_control_xl_mk2/: driver.rs  input.rs  mod.rs  output.rs  visual.rs
crates/tin-drivers-midi/src/devices/launchpad_mini_mk3/: driver.rs  input.rs  mod.rs  output.rs  visual.rs
crates/tin-drivers-midi/src/examples/: lpm3_lcxl2_cube.rs  mod.rs
crates/tin-midi-clock/: Cargo.toml
crates/tin-midi-clock/src/: clock.rs  func.rs  lib.rs
crates/tin/src/: main.rs  model.rs
crates/tin/src/servers/: bismuth.rs  mod.rs  renoise.rs
crates/tin/src/views/: lcxl2_control.rs  lcxl2_panel.rs  lpm3_matrix.rs  lpm3_songlist.rs  mod.rs
docs/: MAIN.md  SETUP.md
docs/technical/: INTERCOM.md
docs/views/lpm3/: MATRIX.md  SONGLIST.md
indium/: README.md  build.ts  package.json  serve.ts  tsconfig.json
indium/src/: dom.ts  draw.ts  index.html  script.ts  style.css  utils.ts  widget.ts
indium/src/widgets/: knob.ts  xy.ts
protobuf/: renoise_from.proto  renoise_to.proto
renoise/massage/: _primitives.lua  generator.lua  massage.lua
renoise/xyz.yyna.Calcium.xrnx/: main.lua  manifest.xml  playback_control.lua  socket.lua  utils.lua
schema/: from_renoise.toml  to_renoise.toml
tin/: Cargo.toml
tin/src/: data.rs  main.rs  model.rs
tin/src/views/: lpm3_matrix.rs
tin/tin-drivers-midi/: Cargo.toml
tin/tin-drivers-midi/src/: lib.rs
tin/tin-drivers-midi/src/devices/: mod.rs
tin/tin-drivers-midi/src/devices/launch_control_xl_mk2/: driver.rs  input.rs  mod.rs  output.rs  visual.rs
tin/tin-drivers-midi/src/devices/launchpad_mini_mk3/: driver.rs  input.rs  mod.rs  output.rs  visual.rs
tin/tin-drivers-midi/src/examples/: lpm3_lcxl2_cube.rs  mod.rs
tin/tin-intercom/: Cargo.toml
tin/tin-intercom/src/: lib.rs
tin/tin-intercom/tests/: simple.rs
