[workspace]
members = [
    "common/intercom",
    "tin",
    "tin/tin-drivers-midi",
    "bismuth"
]
resolver = "3"

[workspace.package]
repository = "https://github.com/yynaa/sophixer"
authors = ["yyna <me@yyna.xyz>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.17"
log = "0.4.28"
