[workspace]
members = [
    "tin-drivers-midi"
]
resolver = "3"

[workspace.package]
repository = "https://github.com/yynaa/sophixer"
authors = ["yyna <me@yyna.xyz>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.17"
log = "0.4.28"

[package]
name = "tin"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tin-drivers-midi = { path = "tin-drivers-midi" }
ctrlc = "3.5.0"
pretty_env_logger = "0.5.0"