[package]
name = "tin"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = ".."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tin-drivers-midi = { path = "tin-drivers-midi" }
intercom = { path = "../common/intercom" }
ctrlc = "3.5.0"
pretty_env_logger = "0.5.0"
argparse = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"