[package]
name = "intercom"
description = "tin lib for communication with other software through tcp & udp"
workspace = "../.."
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }