[package]
name = "editor-cli"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
tin-core = { path = "../tin-core" }
clap = "4.6.0"
