[package]
name = "editor-cli"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
sophixer-core = { path = "../sophixer-core" }
clap = "4.6.0"
