[package]
name = "editor"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
sophixer-core = { path = "../sophixer-core" }
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.6.0", features = ["derive"] }
