[package]
name = "editor"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
sophixer-core = { path = "../sophixer-core" }
eframe = { version = "0.34", features = ["default"] }
pretty_env_logger = "0.5.0"
rfd = "0.17"
ron = "0.12"
