[package]
name = "intercom"
description = "tin lib for communication with other software through tcp & udp"
workspace = "../.."
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
tokio = { version = "1.52", features = ["net", "rt", "macros", "time"] }
async-trait = { version = "0.1" }
env_logger = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
