[package]
name = "sophixer-core"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
intercom = { path = "../intercom" }
serde = { version = "1.0.228", features = ["derive"] }
ron = { version = "0.12.0" }
