[package]
name = "sophixer-core"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
intercom = { path = "../intercom" }
serde = { version = "1.0.228", features = ["derive"] }
ron = { version = "0.12.0" }
enum_dispatch = { version = "0.3" }
prost = "0.14"
derive_more = { version = "2.1", features = ["from"] }

[build-dependencies]
prost-build = "0.14"
