[package]
name = "sophixer-core"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
intercom = { path = "../intercom" }
serde = { version = "1.0.228", features = ["derive"] }
ron = { version = "0.12.0" }
enum_dispatch = { version = "0.3" }

[build-dependencies]
massage = { git = "https://github.com/yynaa/massage.git", tag = "v0.25.07.2", subdir = "rust/" }
