[package]
name = "tin-core"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
ron = { version = "0.12.0" }
