[package]
name = "tin-midi-clock"
description = "tin lib for midi clock"
workspace = "../.."

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
midir = "0.10.2"
