[package]
name = "tin"
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
workspace = "../.."

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
sophixer-core = { path = "../sophixer-core" }
tin-drivers-midi = { path = "../tin-drivers-midi" }
intercom = { path = "../intercom" }
ctrlc = "3.5.0"
pretty_env_logger = "0.5.0"
argparse = "0.2.2"
bimap = "0.6.3"
