[package]
name = "tin-drivers-midi"
description = "tin lib for midi drivers"
workspace = ".."

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[features]
examples = ["dep:ndarray", "dep:color-lib"]

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
midir = "0.10.2"
ndarray = { version = "0.16.1", optional = true }
color-lib = { version = "0.1.0", optional = true }